--- a/style.css
+++ b/style.css
@@ -3,9 +3,30 @@ body {
   padding: 0;
   font-family: 'Prompt', sans-serif;
   background-color: #ffffffae;
+  text-align: center;
+  color: #333;
+  padding-bottom: 100px;
+}
+
+#frase {
+  font-size: 20px;
+  margin-bottom: 30px;
   color: #333;
 }
 
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
 header h1 {
   font-family: 'Dancing Script', cursive;
   font-size: 3em;
