--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
 body {
+  background-color: #111010;
+  color: white;
+}
+
+.card {
+  background-color: #f9f4f4;
+  border: none;
+}
+
+.modal-content {
+  background-color: #1b1a1a;
+  color: white;
+}
+
+body {
+
   margin: 0;
   padding: 0;
   font-family: 'Prompt', sans-serif;
@@ -7,7 +23,6 @@ body {
   color: #333;
   padding-bottom: 100px;
 }
-
 #frase {
   font-size: 20px;
   margin-bottom: 30px;
